// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`did-key-creator-p256 ECPointCompress 1`] = `
Uint8Array [
  3,
  249,
  195,
  111,
  137,
  100,
  98,
  51,
  120,
  189,
  192,
  104,
  212,
  188,
  224,
  126,
  209,
  124,
  143,
  164,
  134,
  249,
  172,
  12,
  38,
  19,
  202,
  60,
  140,
  48,
  109,
  123,
  182,
]
`;

exports[`did-key-creator-p256 compressedKeyInHexfromRaw 1`] = `"03f9c36f8964623378bdc068d4bce07ed17c8fa486f9ac0c2613ca3c8c306d7bb6"`;

exports[`did-key-creator-p256 didKeyIDtoPubKeyHex 1`] = `"f9c36f8964623378bdc068d4bce07ed17c8fa486f9ac0c2613ca3c8c306d7bb61cd36717b8ac5e4fea8ad23dc8d0783c2318ee4ad7a80db6e0026ad0b072a24f"`;

exports[`did-key-creator-p256 didKeyURLtoPubKeyHex 1`] = `"f9c36f8964623378bdc068d4bce07ed17c8fa486f9ac0c2613ca3c8c306d7bb61cd36717b8ac5e4fea8ad23dc8d0783c2318ee4ad7a80db6e0026ad0b072a24f"`;

exports[`did-key-creator-p256 encodeDIDfromBytes 1`] = `"did:key:zruuPojWkzGPb8sVc42f2YxcTXKUTpAUbdrzVovaTBmGGNyK6cGFaA4Kp7SSLKecrxYz8Sc9d77Rss7rayYt1oFCaNJ"`;

exports[`did-key-creator-p256 encodeDIDfromHexString 1`] = `"did:key:zruuPojWkzGPb8sVc42f2YxcTXKUTpAUbdrzVovaTBmGGNyK6cGFaA4Kp7SSLKecrxYz8Sc9d77Rss7rayYt1oFCaNJ"`;

exports[`did-key-creator-p256 encodeDIDfromHexStringtoCompressed 1`] = `"did:key:zDnaezUFn4zmNoNeZvBEdVyCv6MVL69X8NRD8YavTCJWGuXM7"`;

exports[`did-key-creator-p256 pubKeyHexToUint8Array 1`] = `
Uint8Array [
  249,
  195,
  111,
  137,
  100,
  98,
  51,
  120,
  189,
  192,
  104,
  212,
  188,
  224,
  126,
  209,
  124,
  143,
  164,
  134,
  249,
  172,
  12,
  38,
  19,
  202,
  60,
  140,
  48,
  109,
  123,
  182,
  28,
  211,
  103,
  23,
  184,
  172,
  94,
  79,
  234,
  138,
  210,
  61,
  200,
  208,
  120,
  60,
  35,
  24,
  238,
  74,
  215,
  168,
  13,
  182,
  224,
  2,
  106,
  208,
  176,
  114,
  162,
  79,
]
`;

exports[`did-key-creator-p256 rawKeyInHexfromUncompressed 1`] = `"f9c36f8964623378bdc068d4bce07ed17c8fa486f9ac0c2613ca3c8c306d7bb61cd36717b8ac5e4fea8ad23dc8d0783c2318ee4ad7a80db6e0026ad0b072a24f"`;

exports[`did-key-creator-p256 uncompressedKeyInHexfromRaw 1`] = `"04f9c36f8964623378bdc068d4bce07ed17c8fa486f9ac0c2613ca3c8c306d7bb61cd36717b8ac5e4fea8ad23dc8d0783c2318ee4ad7a80db6e0026ad0b072a24f"`;

exports[`did-key-creator-p384 ECPointCompress 1`] = `
Uint8Array [
  3,
  148,
  137,
  211,
  198,
  95,
  31,
  140,
  178,
  169,
  253,
  64,
  171,
  196,
  141,
  22,
  14,
  73,
  90,
  134,
  47,
  187,
  251,
  254,
  137,
  110,
  216,
  135,
  142,
  36,
  111,
  50,
  248,
  94,
  118,
  18,
  149,
  116,
  112,
  95,
  139,
  97,
  194,
  99,
  203,
  127,
  64,
  156,
  156,
]
`;

exports[`did-key-creator-p384 compressedKeyInHexfromRaw 1`] = `"039489d3c65f1f8cb2a9fd40abc48d160e495a862fbbfbfe896ed8878e246f32f85e76129574705f8b61c263cb7f409c9c"`;

exports[`did-key-creator-p384 didKeyIDtoPubKeyHex 1`] = `"039489d3c65f1f8cb2a9fd40abc48d160e495a862fbbfbfe896ed8878e246f32f85e76129574705f8b61c263cb7f409c9c"`;

exports[`did-key-creator-p384 didKeyURLtoPubKeyHex 1`] = `"039489d3c65f1f8cb2a9fd40abc48d160e495a862fbbfbfe896ed8878e246f32f85e76129574705f8b61c263cb7f409c9c"`;

exports[`did-key-creator-p384 encodeDIDfromBytes 1`] = `"did:key:zFwfeyrSyWdksRYykTGGtagWazFB5zS4CjQcxDMQSNmCTQB5QMqokx2VJz4vBB2hN1nUrYDTuYq3kd1BM5cUCfFD4awiNuzEBuoy6rZZTMCsZsdvWkDXY6832qcAnzE7YGw43KU"`;

exports[`did-key-creator-p384 encodeDIDfromHexString 1`] = `"did:key:zFwfeyrSyWdksRYykTGGtagWazFB5zS4CjQcxDMQSNmCTQB5QMqokx2VJz4vBB2hN1nUrYDTuYq3kd1BM5cUCfFD4awiNuzEBuoy6rZZTMCsZsdvWkDXY6832qcAnzE7YGw43KU"`;

exports[`did-key-creator-p384 encodeDIDfromHexStringtoCompressed 1`] = `"did:key:z82Lm1MpAkeJcix9K8TMiLd5NMAhnwkjjCBeWHXyu3U4oT2MVJJKXkcVBgjGhnLBn2Kaau9"`;

exports[`did-key-creator-p384 pubKeyHexToUint8Array 1`] = `
Uint8Array [
  148,
  137,
  211,
  198,
  95,
  31,
  140,
  178,
  169,
  253,
  64,
  171,
  196,
  141,
  22,
  14,
  73,
  90,
  134,
  47,
  187,
  251,
  254,
  137,
  110,
  216,
  135,
  142,
  36,
  111,
  50,
  248,
  94,
  118,
  18,
  149,
  116,
  112,
  95,
  139,
  97,
  194,
  99,
  203,
  127,
  64,
  156,
  156,
  203,
  163,
  117,
  32,
  47,
  182,
  153,
  124,
  71,
  173,
  225,
  19,
  5,
  110,
  202,
  222,
  96,
  92,
  195,
  74,
  134,
  175,
  112,
  150,
  28,
  43,
  62,
  202,
  93,
  61,
  200,
  36,
  17,
  45,
  204,
  159,
  26,
  254,
  215,
  134,
  160,
  39,
  128,
  115,
  174,
  231,
  86,
  111,
]
`;

exports[`did-key-creator-p384 rawKeyInHexfromUncompressed 1`] = `"9489d3c65f1f8cb2a9fd40abc48d160e495a862fbbfbfe896ed8878e246f32f85e76129574705f8b61c263cb7f409c9ccba375202fb6997c47ade113056ecade605cc34a86af70961c2b3eca5d3dc824112dcc9f1afed786a0278073aee7566f"`;

exports[`did-key-creator-p384 uncompressedKeyInHexfromRaw 1`] = `"049489d3c65f1f8cb2a9fd40abc48d160e495a862fbbfbfe896ed8878e246f32f85e76129574705f8b61c263cb7f409c9ccba375202fb6997c47ade113056ecade605cc34a86af70961c2b3eca5d3dc824112dcc9f1afed786a0278073aee7566f"`;

exports[`did-key-creator-p521 ECPointCompress 1`] = `
Uint8Array [
  2,
  1,
  37,
  7,
  60,
  204,
  162,
  114,
  20,
  52,
  65,
  177,
  217,
  246,
  135,
  205,
  199,
  249,
  120,
  203,
  185,
  110,
  157,
  201,
  249,
  125,
  226,
  139,
  163,
  115,
  169,
  39,
  105,
  210,
  109,
  154,
  2,
  238,
  103,
  223,
  162,
  88,
  249,
  187,
  46,
  236,
  232,
  164,
  138,
  92,
  89,
  167,
  53,
  108,
  70,
  39,
  141,
  136,
  58,
  184,
  217,
  227,
  186,
  170,
  194,
  172,
  146,
]
`;

exports[`did-key-creator-p521 compressedKeyInHexfromRaw 1`] = `"020125073ccca272143441b1d9f687cdc7f978cbb96e9dc9f97de28ba373a92769d26d9a02ee67dfa258f9bb2eece8a48a5c59a7356c46278d883ab8d9e3baaac2ac92"`;

exports[`did-key-creator-p521 didKeyIDtoPubKeyHex 1`] = `"020125073ccca272143441b1d9f687cdc7f978cbb96e9dc9f97de28ba373a92769d26d9a02ee67dfa258f9bb2eece8a48a5c59a7356c46278d883ab8d9e3baaac2ac92"`;

exports[`did-key-creator-p521 didKeyURLtoPubKeyHex 1`] = `"020125073ccca272143441b1d9f687cdc7f978cbb96e9dc9f97de28ba373a92769d26d9a02ee67dfa258f9bb2eece8a48a5c59a7356c46278d883ab8d9e3baaac2ac92"`;

exports[`did-key-creator-p521 encodeDIDfromBytes 1`] = `"did:key:zWGhj2NTyCiehTPioanYSuSrfB7RJKwZj6bBUDNojfGEA21nr5NcBsHme7hcVSbptpWKarJpTcw814J3X8gVU9gZmeKM27JpGA5wNMzt8JZwjDyf8EzCJg5ve5GR2Xfm7d9Djp73V7s35KPeKe7VHMzmL8aPw4XBniNej5sXapPFoBs5R8m195HK"`;

exports[`did-key-creator-p521 encodeDIDfromHexString 1`] = `"did:key:zWGhj2NTyCiehTPioanYSuSrfB7RJKwZj6bBUDNojfGEA21nr5NcBsHme7hcVSbptpWKarJpTcw814J3X8gVU9gZmeKM27JpGA5wNMzt8JZwjDyf8EzCJg5ve5GR2Xfm7d9Djp73V7s35KPeKe7VHMzmL8aPw4XBniNej5sXapPFoBs5R8m195HK"`;

exports[`did-key-creator-p521 encodeDIDfromHexStringtoCompressed 1`] = `"did:key:z2J9gaYxrKVpdoG9A4gRnmpnRCcxU6agDtFVVBVdn1JedouoZN7SzcyREXXzWgt3gGiwpoHq7K68X4m32D8HgzG8wv3sY5j7"`;

exports[`did-key-creator-p521 pubKeyHexToUint8Array 1`] = `
Uint8Array [
  1,
  37,
  7,
  60,
  204,
  162,
  114,
  20,
  52,
  65,
  177,
  217,
  246,
  135,
  205,
  199,
  249,
  120,
  203,
  185,
  110,
  157,
  201,
  249,
  125,
  226,
  139,
  163,
  115,
  169,
  39,
  105,
  210,
  109,
  154,
  2,
  238,
  103,
  223,
  162,
  88,
  249,
  187,
  46,
  236,
  232,
  164,
  138,
  92,
  89,
  167,
  53,
  108,
  70,
  39,
  141,
  136,
  58,
  184,
  217,
  227,
  186,
  170,
  194,
  172,
  146,
  1,
  111,
  115,
  136,
  128,
  184,
  101,
  4,
  21,
  72,
  217,
  139,
  150,
  158,
  125,
  201,
  130,
  171,
  141,
  22,
  52,
  253,
  90,
  142,
  248,
  99,
  136,
  97,
  15,
  109,
  98,
  147,
  235,
  104,
  18,
  148,
  150,
  129,
  8,
  119,
  167,
  8,
  254,
  252,
  167,
  11,
  57,
  89,
  89,
  155,
  86,
  166,
  3,
  140,
  220,
  115,
  225,
  96,
  72,
  26,
  193,
  14,
  244,
  221,
  24,
  194,
]
`;

exports[`did-key-creator-p521 rawKeyInHexfromUncompressed 1`] = `"0125073ccca272143441b1d9f687cdc7f978cbb96e9dc9f97de28ba373a92769d26d9a02ee67dfa258f9bb2eece8a48a5c59a7356c46278d883ab8d9e3baaac2ac92016f738880b865041548d98b969e7dc982ab8d1634fd5a8ef86388610f6d6293eb68129496810877a708fefca70b3959599b56a6038cdc73e160481ac10ef4dd18c2"`;

exports[`did-key-creator-p521 uncompressedKeyInHexfromRaw 1`] = `"040125073ccca272143441b1d9f687cdc7f978cbb96e9dc9f97de28ba373a92769d26d9a02ee67dfa258f9bb2eece8a48a5c59a7356c46278d883ab8d9e3baaac2ac92016f738880b865041548d98b969e7dc982ab8d1634fd5a8ef86388610f6d6293eb68129496810877a708fefca70b3959599b56a6038cdc73e160481ac10ef4dd18c2"`;
